Fri Nov 28 21:39:53 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_traits.cpp:
        * TAO_IDL/be_include/be_visitor_traits.h:
        
          - Added check in visit_array() to skip code generation if the node
            is imported.
            
          - Added methods visit_field, visit_exception, visit_structure and
            visit_union to the visitor class, to catch anonymous arrays
            declared inside IDL structs, unions and exceptions.

Fri Nov 28 17:21:28 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/ORB_Core.cpp:

	  Cosmetic fix.

Fri Nov 28 16:43:12 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* examples/Kokyu_dsrt_schedulers/Kokyu_DSRT_Schedulers.dsp: 
	  Added $TAO_ROOT/tao to include path.

Fri Nov 28 15:44:31 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Sequence_Latency/Deferred/client.bor:
          Added portableserver library

Fri Nov 28 15:30:42 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/AV.bor:
        * orbsvcs/orbsvcs/CosConcurrency.bor:
        * orbsvcs/orbsvcs/CosEvent.bor:
        * orbsvcs/orbsvcs/CosLifeCycle.bor:
        * orbsvcs/orbsvcs/CosNaming.bor:
        * orbsvcs/orbsvcs/CosProperty.bor:
        * orbsvcs/orbsvcs/CosTime.bor:
        * orbsvcs/orbsvcs/CosTrading.bor:
        * orbsvcs/orbsvcs/DsLogAdmin.bor:
        * orbsvcs/orbsvcs/ETCL.bor:
        * orbsvcs/orbsvcs/FaultTolerance.bor:
        * orbsvcs/orbsvcs/PortableGroup.bor:
        * orbsvcs/orbsvcs/RT_Notification.bor:
        * orbsvcs/orbsvcs/SSLIOP.bor:
        * orbsvcs/orbsvcs/Svc_Utils.bor:
          Added missing Id tag

Fri Nov 28 14:33:09 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/CosNotification.mpc:
          Removed template files from sources

Fri Nov 28 13:34:03 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Sequence_Latency/Deferred/client.bor: